cluster/apps/platform/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "inicio.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: ExternalAuth
          externalAuth:
            backendRef:
              group: ""
              kind: Service
              name: authelia
              namespace: authelia
              port: 80
            protocol: HTTP
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - cookie
                - authorization
                - x-forwarded-proto
                - x-forwarded-host
                - x-forwarded-uri
                - x-forwarded-for
                - accept
              allowedResponseHeaders:
                - remote-user
                - remote-groups
                - remote-name
                - remote-email
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 80
